@@ -23,9 +23,6 @@
 /* Use CMU Common-Lisp's FORMAT routine					*/
 #define ECL_CMU_FORMAT 1
 
-/* Bytecodes and arguments are 8 and 16 bits large, respectively	*/
-/* #undef ECL_SMALL_BYTECODES */
-
 /* Assembler implementation of APPLY and friends			*/
 /* #undef ECL_ASM_APPLY */
 
